--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,5 @@ quarkus.datasource.jdbc.url=jdbc:postgresql://localhost:5432/pwebp9
  
 quarkus.hibernate-orm.database.generation=update
 quarkus.hibernate-orm.log.sql=true
+
+quarkus.resteasy.path=/matricula/api/v1.0
