--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,8 @@ quarkus.hibernate-orm.database.generation=update
 quarkus.hibernate-orm.log.sql=true
 
 quarkus.resteasy.path=/matricula/api/v1.0
+
+quarkus.http.port=8081
+
+quarkus.http.cors.enabled=true
+quarkus.http.cors.origins=http://localhost:5173
